# ibpy

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Pipfile  Procfile  README.md  manage.py  mkdocs.yml  publish_new_release.sh  pyproject.toml  requirements.txt  setup.cfg
docs/: index.md
docs/api/: user_profile.md
icgbooks/: urls.py  wsgi.py
icgbooks/books/: apps.py  models.py  serializers.py  tests.py  views.py
icgbooks/books/migrations/: 0001_initial.py  0001_squashed_0003_book.py  0002_delete_book.py  0003_book.py
icgbooks/config/: __init__.py  common.py  heroku.py  local.py
icgbooks/querypool/: apps.py  models.py
icgbooks/shelves/: models.py  serializers.py  views.py
icgbooks/shelves/migrations/: 0001_initial.py  0002_auto_20200530_1024.py
icgbooks/users/: serializers.py  views.py
